--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pandas = "^1.3.5"
+altair = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 
