--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.9"
 pandas = "^1.3.5"
 altair = "^4.2.0"
+python-dotenv = "^0.19.2"
 
 [tool.poetry.dev-dependencies]
 
