--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^0.19.2"
 requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
