--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ pandas = "^1.3.5"
 altair = "^4.2.0"
 python-dotenv = "^0.19.2"
 requests = "^2.27.1"
+arrow = "^1.2.1"
+tweepy = "^4.4.0"
+textblob = "^0.17.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
