--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ textblob = "^0.17.1"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
+codecov = "^2.1.12"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
