--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ requests = "^2.27.1"
 arrow = "^1.2.1"
 tweepy = "^4.4.0"
 textblob = "^0.17.1"
+wordcloud = "^1.8.1"
+matplotlib = "^3.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
