--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ tweepy = "^4.4.0"
 textblob = "^0.17.1"
 wordcloud = "^1.8.1"
 matplotlib = "^3.5.1"
+altair-saver = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
